--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,30 +1,30 @@
 html, body{
     --color: #212121;
-
+    --background: #f3f3f3;
 }
 
 article,aside,dialog,footer,header,section,footer,nav,figure,menu,img,video,audio{ display: block; }
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dialog,dl,dt,dd,ul,ol,li,iframe,pre,form,figure,fieldset,legend,button,input,textarea,th,td{ margin: 0; padding: 0; border: 0; }
 a{ color: inherit; text-decoration: none; cursor: pointer; transition: all .24s; }
 b,strong{ font-weight: 700; }
-html,body{ position: relative; color: var(--color); font: normal 400 14px 'Microsoft Yahei'; line-height: 1.425; overflow-x: hidden; height: 100%; scroll-behavior: smooth; display: flex; flex-direction: column; }
+html,body{ position: relative; color: var(--color); font: normal 400 14px Consolas, 'Microsoft Yahei'; line-height: 1.425; overflow-x: hidden; height: 100%; scroll-behavior: smooth; display: flex; flex-direction: column; }
 input, button, textarea, select{ font: inherit; }
 input:-webkit-autofill{ background-color: initial; }
 ul,li,ol{ list-style: none; }
 img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transition: all .24s; }
 
 ::selection{ background-color: #cee3f8 !important; color: var(--color) !important; }
-::-webkit-scrollbar{ width: 6px; height: 6px; }
+::-webkit-scrollbar{ width: 4px; height: 4px; }
 ::-webkit-scrollbar-button,::-webkit-scrollbar-corner{ display: none; }
 ::-webkit-scrollbar-track{ background-color: inherit; }
-::-webkit-scrollbar-thumb{ background-color: #808080; border: 1px solid transparent; border-radius: 6px; }
+::-webkit-scrollbar-thumb{ background-color: #808080; border: 1px solid transparent; }
 
 .header{
-    position: relative;
+    position: sticky; z-index: 100;
+    top: 0;
     display: flex;
     flex-wrap: wrap;
-    padding: 0 4px;
-    backdrop-filter: blur(2px);
+    padding: 0 16px;
     -webkit-app-region: drag;
 }
 .header > nav {
@@ -33,13 +33,53 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
     -webkit-app-region: no-drag;
 }
 .nav{
-    padding: .36em .5em;
+    padding: .28em .48em;
+    border-radius: 0 0 2px 2px;
     -webkit-app-region: no-drag;
+}
+.nav:hover{
+    background: rgba(255, 255, 255, .6);
 }
 
 .content{
+    display: flex;
+    flex-wrap: wrap;
     flex: 1 1 auto;
     position: relative;
+    overflow: hidden;
+}
+.section{
+    position: relative;
+    flex: 1 1 0;
+}
+.editor{
+    box-sizing: border-box;
+    padding: 1em;
+    height: 100%;
+    outline: none;
+    overflow: hidden;
+    transition: all .24s;
+}
+.editor:hover{
+    overflow: auto;
+}
+.editor:focus{
+    background: #fff;
+}
+.title{
+    position: absolute; z-index: 1;
+    bottom: 0; right: 0;
+    padding: .32em 1em;
+    background: rgba(22,22,22,.1);
+    backdrop-filter: blur(2px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    transition: all .24s;
+    pointer-events: none;
+}
+.section:focus-within .title{
+    opacity: 0;
 }
 
 .footer{
